# squad-api

./: Dockerfile  Procfile  Taskfile.yml  cloudbuild.yaml  cloudbuild.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  runserver.sh
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_event_group.py  0003_auto_20210612_0222.py  0004_auto_20210612_0223.py  0005_auto_20210612_0223.py  0006_auto_20210612_0246.py  0007_auto_20210612_0247.py  0008_discorduser.py  0009_alter_discorduser_discordid.py  0010_alter_discorduser_discriminator.py  0011_bias.py  0012_auto_20210926_2233.py  0013_auto_20211228_0053.py  0014_event_source.py  0015_alter_event_options_delete_bias_delete_discorduser.py
proxy/: default.conf  nginx.conf
squad_api/: asgi.py  settings.py  urls.py  wsgi.py
web/app/: .gitignore  Dockerfile  package-lock.json  package.json
web/app/public/: index.html
web/app/src/: App.css  App.js  App.tsx  index.css
web/app/src/api/: index.ts
web/app/src/api/types/: birthday.ts  event.ts
web/app/src/components/: Birthdays.tsx  Events.tsx  index.tsx
web/app/src/components/home/: Biases.js  Events.js  Home.js
web/app/src/contexts/: GeneralContext.js
web/app/src/shared/: Login.js  NavigationBar.js  Routes.js
web/app/src/utils/: Endpoints.js  GAUtil.js  GAUtil.tsx  date.js  date.ts
